<resources>
    <string name="app_name">KelompokSatuUser</string>
    <string name="kelompok">Kelompok</string>
    <string name="satu">Satu</string>
    <string name="login_menggunakan_akun_google">Login menggunakan akun Google</string>
    <string name="nanti_dulu">Lewati untuk saat ini</string>
    <string name="dashboard">Dashboard</string>
    <string name="paket">Paket</string>
    <string name="pesanan">Pesanan</string>
    <string name="profil">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guide">Tour Guide</string>
    <string name="sumatra_barat">Sumatra Barat</string>
    <string name="bali">Bali</string>
    <string name="jambi">Jambi</string>
    <string name="jawa_barat">Jawa Barat</string>
    <string name="jawa_tengah">Jawa Tengah</string>
    <string name="jawa_timur">Jawa Timur</string>
    <string name="domisili">Domisili</string>
    <string name="paket_terlaris">Paket Favorit</string>
    <string name="nama_paket">Nama Paket</string>
    <string name="nama_guide">Nama Guide</string>
    <string name="umur">Umur</string>
    <string name="tahun">Tahun</string>
    <string name="motto_guide">Motto Guide</string>
    <string name="name">Kelompok Satu</string>
    <string name="durasi">Durasi</string>
    <string name="rp">Rp</string>
    <string name="alamat">Alamat</string>
    <string name="_1000000">1000000</string>
    <string name="koma">,-</string>
    <string name="pesan">Pesan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="e_mail">E-Mail</string>
    <string name="pilih_tanggal_keberangkatan">Pilih Tanggal Keberangkatan</string>
    <string name="upload_foto_ktp">Upload Foto KTP</string>
    <string name="acc">Dengan ini saya menyatakan bahwa data yang isi merupakan data yang sebenar-benarnya dan dapat dipertanggung jawabkan.</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="nama_user">Nama User</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="logout">Logout</string>
    <string name="wishlist">Wishlist</string>
    <string name="update_data">Update Data</string>
    <string name="pilih_gambar_untuk_foto_profil">Pilih Gambar untuk Foto Profil</string>
    <string name="tanggal">--/--/----</string>
    <string name="belum_bayar">Belum Bayar</string>
    <string name="proses">Proses</string>
    <string name="selesai">Selesai</string>
    <string name="dalam_perjalanan">Dalam Perjalanan</string>
    <string name="cari">Cari...</string>
    <string name="nota_pesanan">Nota Pesanan</string>
    <string name="data_diri">Data Diri</string>
    <string name="pilih_metode_pembayaran">Metode Pembayaran</string>
    <string name="bca">BCA a/n Rico Eka Rizkya 8365165838</string>
    <string name="dana">DANA a/n Rico Eka Rizkya 082144285606</string>
    <string name="upload_bukti_pembayaran">Upload Bukti Pembayaran</string>
    <string name="verifikasi_pembayaran">Verifikasi Pembayaran</string>
</resources>