<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_mountains_1_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tv_tanggal_ini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_belum_bayar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_bayar"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_dalam_perjalanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dalam_perjalanan"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_selesai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selesai"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nama_paket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nama_paket"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:ellipsize="end"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_tanggal_ini"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_durasi_paket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/durasi"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_paket" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>