<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cream_new"
    tools:context=".pesanan.ui.BayarPesananActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_nota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nota_pesanan"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_nota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nota"
            app:layout_constraintEnd_toEndOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_data_diri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_diri"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/bg"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/grey"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_data_diri"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_nama_depan_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_user"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bg" />

                <TextView
                    android:id="@+id/tv_nama_belakang_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_user"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintStart_toEndOf="@id/tv_nama_depan_user"
                    app:layout_constraintTop_toBottomOf="@id/bg" />

                <TextView
                    android:id="@+id/tv_nomor_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nomor_telepon"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_nama_depan_user" />

                <TextView
                    android:id="@+id/tv_email_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e_mail"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_nomor_user" />

                <TextView
                    android:id="@+id/tv_alamat_user"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:ellipsize="end"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_email_user"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_pesanan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pesanan"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_alamat_user" />

                <View
                    android:id="@+id/bg2"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/grey"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_pesanan"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_nama_paket"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_paket"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:ellipsize="end"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bg2"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_alamat_paket"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:ellipsize="end"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_nama_paket"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_durasi_paket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/durasi"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_alamat_paket" />

                <TextView
                    android:id="@+id/tv_tanggal_berangkat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_durasi_paket" />

                <TextView
                    android:id="@+id/tv_guide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guide"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_tanggal_berangkat" />

                <TextView
                    android:id="@+id/tv_harga_paket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_guide" />

                <TextView
                    android:id="@+id/tv_total_paket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1000000"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toEndOf="@id/tv_harga_paket"
                    app:layout_constraintTop_toBottomOf="@id/tv_guide" />

                <TextView
                    android:id="@+id/tv_koma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/koma"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintStart_toEndOf="@id/tv_total_paket"
                    app:layout_constraintTop_toBottomOf="@id/tv_guide"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_metode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pilih_metode_pembayaran"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_nota" />

        <TextView
            android:id="@+id/tv_bca"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bca"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_metode"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_dana"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dana"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_bca"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_bukti_pembayaran"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dana" />

        <ImageButton
            android:id="@+id/btn_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/poster_image"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_upload"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_image"
            app:layout_constraintStart_toStartOf="@id/btn_image"
            app:layout_constraintTop_toTopOf="@id/btn_image"
            app:layout_constraintEnd_toEndOf="@id/btn_image"
            app:layout_constraintBottom_toBottomOf="@id/btn_image" />

        <Button
            android:id="@+id/btn_verif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verifikasi_pembayaran"
            android:enabled="false"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_image"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>