<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="15dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tv_nama_guide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nama_guide"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:ellipsize="end"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_umur_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/umur"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_guide" />

        <TextView
            android:id="@+id/tv_tahun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tahun"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/tv_umur_guide"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_guide" />

        <TextView
            android:id="@+id/tv_motto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/motto_guide"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="14sp"
            android:ellipsize="end"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_umur_guide"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>